syntax = "proto3";

package blog;

option go_package = "blog/proto";

import "google/protobuf/empty.proto";

message Blog {
    string id = 1;
    string autho_id = 2;
    string title = 3;
    string content = 4;
}

// Wrapper 
message BlogId {
    string id = 1;
}

service BlogService {
    rpc CreateBlog (Blog) returns (BlogId);
    rpc ReadBlog (BlogId) returns (Blog);
    rpc UpdateBlog (Blog) returns (google.protobuf.Empty);
    rpc DeleteBlog (BlogId) returns (google.protobuf.Empty);
    rpc ListBlogd (google.protobuf.Empty) returns (stream Blog);
}